--- a/TwoWayRecyclerView/app/src/main/AndroidManifest.xml
+++ b/TwoWayRecyclerView/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="project.samp.mariusduna.twowayrecyclerview">
+    package="epg.duna.twowayrecyclerview">
 
     <application
         android:allowBackup="true"
