--- a/TwoWayRecyclerView/app/build.gradle
+++ b/TwoWayRecyclerView/app/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "epg.duna.twowayrecyclerview"
         minSdkVersion 17
-        targetSdkVersion 23
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -24,7 +23,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile project(':genericepg')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':genericepg')
+    implementation 'com.google.android.material:material:1.0.0'
 }
