--- a/TwoWayRecyclerView/app/build.gradle
+++ b/TwoWayRecyclerView/app/build.gradle
@@ -1,8 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
+    disableAutoTargetJvm()
     lintOptions {
-        ignoreWarnings = true
+        abortOnError false        // true by default
+        checkAllWarnings false
+        checkReleaseBuilds false
+        ignoreWarnings true       // false by default
+        quiet true                // false by default
     }
 
     compileSdkVersion 30
@@ -11,8 +16,8 @@ android {
         applicationId "epg.duna.twowayrecyclerview"
         minSdkVersion 17
         targetSdkVersion 30
-        versionCode 2
-        versionName "1.1"
+        versionCode 3
+        versionName "1.2"
     }
     buildTypes {
         release {
@@ -24,6 +29,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildToolsVersion '30.0.2'
 }
 
 dependencies {
