--- a/TwoWayRecyclerView/genericepg/build.gradle
+++ b/TwoWayRecyclerView/genericepg/build.gradle
@@ -5,7 +5,7 @@ publish {
 
     def groupProjectID = 'genericepg.duna.project'
     def artifactProjectID = 'tvepg'
-    def publishVersionID = '1.0.1'
+    def publishVersionID = '1.0.2'
 
     userOrg = 'dunatv'
     repoName = 'TV_EPG'
@@ -18,18 +18,21 @@ publish {
 }
 
 android {
-
+    disableAutoTargetJvm()
     lintOptions {
-        ignoreWarnings = true
+        abortOnError false        // true by default
+        checkAllWarnings false
+        checkReleaseBuilds false
+        ignoreWarnings true       // false by default
+        quiet true                // false by default
     }
-
     compileSdkVersion 30
 
     defaultConfig {
         minSdkVersion 17
         targetSdkVersion 30
-        versionCode 2
-        versionName "1.1"
+        versionCode 3
+        versionName "1.2"
 
     }
     buildTypes {
@@ -38,6 +41,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    buildToolsVersion '30.0.2'
 }
 
 dependencies {
