--- a/TwoWayRecyclerView/build.gradle
+++ b/TwoWayRecyclerView/build.gradle
@@ -4,12 +4,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.1'
         classpath 'com.novoda:bintray-release:0.8.0'
         classpath 'com.github.dcendents:android-maven-plugin:1.2'
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.1"
+        classpath 'com.github.panpf.bintray-publish:bintray-publish:1.0.0'
     }
 
     gradle.projectsEvaluated {
