--- a/TwoWayRecyclerView/genericepg/build.gradle
+++ b/TwoWayRecyclerView/genericepg/build.gradle
@@ -1,5 +1,5 @@
-apply plugin: 'com.novoda.bintray-release'
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.panpf.bintray-publish'
 
 publish {
 
