--- a/TwoWayRecyclerView/app/build.gradle
+++ b/TwoWayRecyclerView/app/build.gradle
@@ -16,8 +16,8 @@ android {
         applicationId "epg.duna.twowayrecyclerview"
         minSdkVersion 17
         targetSdkVersion 30
-        versionCode 3
-        versionName "1.2"
+        versionCode 4
+        versionName "1.4"
     }
     buildTypes {
         release {
@@ -36,4 +36,5 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':genericepg')
     implementation 'com.google.android.material:material:1.2.1'
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
 }
