Vertical channels Alignment issue fixed
Vertical channels Alignment issue fixed

--- a/TwoWayRecyclerView/genericepg/build.gradle
+++ b/TwoWayRecyclerView/genericepg/build.gradle
@@ -1,21 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.panpf.bintray-publish'
-
-publish {
-
-    def groupProjectID = 'genericepg.duna.project'
-    def artifactProjectID = 'tvepg'
-    def publishVersionID = '1.0.5'
-
-    userOrg = 'dunatv'
-    repoName = 'TV_EPG'
-    groupId = groupProjectID
-    artifactId = artifactProjectID
-    publishVersion = publishVersionID
-    desc = 'Android library for a performant Electronic Program Guide(EPG) using Recyclerview all the way up'
-    website = 'https://github.com/Duna/TV-EPG-Android-Recyclerview'
-
-}
 
 android {
     disableAutoTargetJvm()
@@ -26,13 +9,11 @@ android {
         ignoreWarnings true       // false by default
         quiet true                // false by default
     }
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         minSdkVersion 17
-        targetSdkVersion 30
-        versionCode 4
-        versionName "1.4"
+        targetSdkVersion 31
 
     }
     buildTypes {
@@ -42,14 +23,13 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
-    buildToolsVersion '30.0.2'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
