--- a/TwoWayRecyclerView/app/build.gradle
+++ b/TwoWayRecyclerView/app/build.gradle
@@ -10,12 +10,12 @@ android {
         quiet true                // false by default
     }
 
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "epg.duna.twowayrecyclerview"
         minSdkVersion 17
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 5
         versionName "1.5"
     }
@@ -26,15 +26,14 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
-    buildToolsVersion '30.0.2'
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':genericepg')
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
 }
